# chatojp

./: Cargo.toml  README.md  Secrets.toml
src/: contents.rs  embedding.rs  errors.rs  main.rs  model.rs  vector.rs
