[package]
name = "chatojpt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
qdrant-client = "1.9.0"
tokio = {version = "1.37.0", features = ["full"]}
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
tracing = "0.1.40"
tempfile = "3.10.1"
hf-hub = { version = "0.3.2", features = ["tokio"] }
serde_json = "1.0.117"
tokenizers = "0.19.1"
safetensors = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
candle-nn = "0.5.1"
candle-core = {version = "0.5.1"}
